# BasisHax

./: .eslintrc.js  .gitignore  CONTRIBUTING.md  LICENSE  PROGRESS.md  PUSH_INSTRUCTIONS.md  README.md  ROADMAP.md  electron.vite.config.ts  package.json  tailwind.config.js  tsconfig.json
.github/workflows/: build.yml
SchoolHax/: package.json  pnpm-lock.yaml  tailwind.config.js
SchoolHax/src/: App.css  App.tsx
SchoolHax/src-tauri/: Cargo.toml  tauri.conf.json
SchoolHax/src-tauri/src/: app_control.rs  combo.rs  hotkey.rs  lib.rs  main.rs  settings.rs  wifi.rs
SchoolHax/src/utils/: tauri.ts
docs/: TECHNICAL_APPROACHES.md  TECH_STACK.md  UI_DESIGN.md
docs/architecture/: system-architecture.md
docs/design/: ui-design-guidelines.md
docs/features/: feature-overview.md
docs/technical/: platform-implementation.md
scripts/: commit-and-push.js  postinstall.js
src/main/: application.ts  hotkeys.ts  index.ts
src/preload/: index.ts
src/renderer/: App.tsx  index.html  index.tsx
src/renderer/components/: Layout.tsx
src/renderer/pages/: Dashboard.tsx  Settings.tsx
src/renderer/styles/: globals.css
